<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/details_title_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentEnd="true"
                  android:orientation="horizontal"
                  android:paddingEnd="12dp"
                  android:paddingStart="12dp"
                  android:paddingTop="12dp"
                  android:weightSum="100">

        <TextView
            android:id="@+id/details_title"
            style="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_weight="10"
            android:text="@string/details_title_text"/>

        <ImageButton
            android:id="@+id/details_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_film_button_description"
            android:src="@android:drawable/ic_menu_delete"
            android:tint="@android:color/holo_red_dark"/>

    </LinearLayout>

    <View
        android:id="@+id/details_title_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/details_title_layout"
        android:layout_marginBottom="@dimen/view_margin"
        android:background="?android:attr/listDivider"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_title_divider"
                android:paddingEnd="12dp"
                android:paddingStart="12dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

            <TextView
                android:id="@+id/details_film_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_margin"
                android:text="@string/film_title_placeholder"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:id="@+id/details_film_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_film_title"
                android:layout_marginBottom="@dimen/view_margin"
                android:text="@string/film_director_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/details_film_actor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_film_director"
                android:layout_marginBottom="@dimen/view_margin"
                android:text="@string/film_actor_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:id="@+id/details_film_year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_film_actor"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginEnd="@dimen/view_margin"
                android:text="@string/year_label"/>

            <TextView
                android:id="@+id/details_film_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/details_film_year_label"
                android:layout_toEndOf="@+id/details_film_year_label"
                android:text="@string/year_placeholder"
                android:textAlignment="viewStart"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/details_film_country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_film_year_label"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginEnd="@dimen/view_margin"
                android:text="@string/country_label"/>

            <TextView
                android:id="@+id/details_film_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/details_film_country_label"
                android:layout_toEndOf="@+id/details_film_country_label"
                android:text="@string/country_placeholder"
                android:textAlignment="viewStart"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/details_film_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_film_country_label"
                android:layout_marginBottom="@dimen/view_margin"
                android:lines="5"
                android:text="@string/description_hint"
                android:textStyle="italic"/>

            <RatingBar
                android:id="@+id/details_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_film_description"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/view_margin"
                android:numStars="5"
                android:rating="10.0"
                android:stepSize="0.5"/>

            <TextView
                android:id="@+id/details_rating_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/details_rating_bar"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginRight="@dimen/view_margin"
                android:text="@string/details_rating_hint"
                android:textAlignment="center"
                android:textStyle="italic"/>

            <ImageButton
                android:id="@+id/details_back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/details_rating_bar"
                android:background="@android:color/transparent"
                android:contentDescription="@string/details_back_button_description"
                android:src="@drawable/ic_done"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
